[package]
name = "cock-tui"
version = "0.8.0"
license = "MIT"
description = "TUI for `cock-lib`"
exclude = ["assets"]
edition = '2021'
authors = ["turn"]
keywords = ["cocks", "penis", "anatomy", "tier", "ranking"]
repository = "https://github.com/im-turn/cock-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
cock-lib = "1.0.0"
