[package]
name = "cock-tui"
version = "1.0.0"
license = "MIT"
description = "TUI for `cock-lib`"
exclude = ["assets"]
edition = '2021'
authors = ["turn"]
keywords = ["cock", "cocks", "tui"]
repository = "https://github.com/im-turn/cock-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
cock-lib = "2.1.0"
